--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Tiro+Devanagari+Hindi:ital@0;1&display=swap');
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><3</title>
+    <title>Love Hub</title>
   </head>
   <body>
     <div id="root"></div>
